add endpoint to retrieve user by id
